fixed: all users had "admin" badge on mobile made user page look not so empty, when it has no content created helper-classes

--- a/ui/src/assets/styles.scss
+++ b/ui/src/assets/styles.scss
@@ -317,12 +317,20 @@ a.secondary:hover {
 }
 
 .text-muted {
-  opacity: 0.8;
+  opacity: 0.8 !important;
+}
+
+.text-white-87 {
+  opacity: 0.87 !important;
 }
 
 .text-break {
   word-break: break-word !important;
   overflow-wrap: break-word !important;
+}
+
+.text-decoration-underline {
+  text-decoration: underline !important;
 }
 
 .bg-darker {
